[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noaa-tides-currents-6min-data-auto-retrieval"
version = "0.1.0"
description = "A lightweight Python toolkit for downloading NOAA Tides & Currents 6-minute water-level data using the NOAA CO-OPS API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Dongchen Wang" }
]
keywords = [
  "NOAA",
  "tides",
  "currents",
  "water level",
  "sea level",
  "coastal",
  "oceanography",
  "climate",
  "API",
  "time series"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.7"
]

[project.urls]
Homepage = "https://github.com/dwang53/NOAA_TidesCurrents_6minData_autoRetrieval"
Repository = "https://github.com/dwang53/NOAA_TidesCurrents_6minData_autoRetrieval"
Issues = "https://github.com/dwang53/NOAA_TidesCurrents_6minData_autoRetrieval/issues"

[tool.setuptools]
py-modules = [
  "LIB_NOAATideCurrentsDataDownload",
  "NOAA_TideCurrents_DataRetrievals_example"
]
